--- a/Index.html
+++ b/Index.html
@@ -2,88 +2,138 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Site Downloader</title>
+<title>WebSnatch</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
+* {
+  box-sizing: border-box;
+}
+
 body {
-  background: #0b0b0b;
-  color: white;
-  font-family: Arial, sans-serif;
+  margin: 0;
+  height: 100vh;
+  font-family: 'Segoe UI', sans-serif;
+  background: linear-gradient(120deg, #00ff99, #0066ff, #8a00ff);
+  background-size: 300% 300%;
+  animation: bgMove 8s infinite alternate;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
 }
 
-.box {
-  background: #151515;
-  padding: 20px;
-  border-radius: 12px;
-  width: 330px;
-  box-shadow: 0 0 20px rgba(0,255,150,.2);
+@keyframes bgMove {
+  0% { background-position: 0% 50%; }
+  100% { background-position: 100% 50%; }
 }
 
-input, button {
+.card {
+  width: 340px;
+  padding: 25px;
+  border-radius: 18px;
+  background: rgba(15,15,15,0.75);
+  backdrop-filter: blur(14px);
+  box-shadow: 0 0 40px rgba(0,0,0,0.6);
+  text-align: center;
+  color: white;
+  animation: fadeIn 0.6s ease;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; transform: scale(0.95); }
+  to { opacity: 1; transform: scale(1); }
+}
+
+.card h1 {
+  font-size: 22px;
+  margin-bottom: 5px;
+}
+
+.card p {
+  font-size: 13px;
+  opacity: 0.7;
+  margin-bottom: 20px;
+}
+
+input {
   width: 100%;
-  padding: 10px;
-  margin-top: 12px;
-  border-radius: 8px;
+  padding: 12px;
+  border-radius: 10px;
   border: none;
   outline: none;
+  background: #111;
+  color: white;
+  margin-bottom: 15px;
 }
 
 button {
-  background: #00ff99;
+  width: 100%;
+  padding: 12px;
+  border-radius: 12px;
+  border: none;
+  background: linear-gradient(90deg, #00ff99, #00ccff);
   font-weight: bold;
   cursor: pointer;
+  transition: 0.3s;
 }
 
 button:hover {
-  opacity: 0.8;
+  transform: scale(1.03);
+  box-shadow: 0 0 15px #00ffcc;
+}
+
+.status {
+  margin-top: 15px;
+  font-size: 14px;
+  min-height: 18px;
 }
 </style>
 </head>
 
 <body>
-<div class="box">
-  <h2>📥 Baixar HTML do Site</h2>
+
+<div class="card">
+  <h1>📥 WebSnatch</h1>
+  <p>Baixe o HTML de qualquer site público</p>
+
   <input id="url" placeholder="https://exemplo.com">
-  <button onclick="baixar()">Baixar</button>
-  <p id="status"></p>
+
+  <button onclick="baixar()">Baixar HTML</button>
+
+  <div class="status" id="status"></div>
 </div>
 
 <script>
 async function baixar() {
   const url = document.getElementById("url").value;
   const status = document.getElementById("status");
-  status.textContent = "";
 
   if (!url.startsWith("http")) {
-    alert("Coloca o link completo com https://");
+    status.innerHTML = "⚠️ Link inválido";
     return;
   }
 
   try {
-    status.textContent = "⏳ Baixando...";
-
+    status.innerHTML = "⏳ Baixando...";
     const proxy = "https://cors.isomorphic-git.org/";
     const res = await fetch(proxy + url);
 
-    if (!res.ok) throw new Error("Falha no fetch");
+    if (!res.ok) throw new Error();
 
     const html = await res.text();
-
     const blob = new Blob([html], { type: "text/html" });
+
     const a = document.createElement("a");
     a.href = URL.createObjectURL(blob);
     a.download = "site.html";
     a.click();
 
-    status.textContent = "✅ Download concluído!";
-  } catch (e) {
-    status.textContent = "❌ Erro ao baixar o site";
+    status.innerHTML = "✅ Download concluído!";
+  } catch {
+    status.innerHTML = "❌ Erro ao baixar o site";
   }
 }
 </script>
+
 </body>
 </html>
